--- a/platform_code/assessment/templates/assessment/section.html
+++ b/platform_code/assessment/templates/assessment/section.html
@@ -32,7 +32,7 @@
         {% include "assessment/content-section.html" %}
     </div>
 
-    <div class="pagination">
+    <div class="pagination margin-bot-30 ">
         {% include "assessment/pagination.html" %}
     </div>
 
