--- a/platform_code/home/templates/home/homepage.html
+++ b/platform_code/home/templates/home/homepage.html
@@ -15,7 +15,7 @@
 
     <div class="row" style="columns: 2">
         <div class="column center-content" >
-            <h3 class="center blue-color">Substra Assessment</h3>
+            <h1 class="center">Substra Assessment</h1>
             <p class="margin-50">Evaluez le niveau de maturité des pratiques de votre organisation de Data Science Responsable et de Confiance</p>
             <div class="row">
                 {% if user.is_authenticated %}
@@ -43,30 +43,30 @@
         <div class="column center-content">
           <p class="margin-50">Un nouvel espace émerge au croisement entre expansion de l'IA dans les organisations et inquiétudes du public sur les données privées, la transparence et la robustesse des algorithmes. Ce sont deux tendances puissantes qui commencent déjà à se percuter. Comment les réconcilier, les conjuguer ensemble ?</p>
             <img class="img-fluid d-block mx-auto margin-150" style="max-height: 350px;" src="{% static 'image/Illustration_7.png' %}" alt="image">
-          <p class="margin-150">En s'appuyant sur les travaux, cadres et corpus existants, nous avons élaboré un référentiel de bonnes pratiques et d'évaluation permettant aux organisations intéressées d'évaluer leur niveau de maturité...</p>
+          <p class="margin-150">En s'appuyant sur les travaux, cadres et corpus existants, nous avons élaboré un référentiel de bonnes pratiques et d'évaluation permettant aux organisations intéressées d'évaluer leur niveau de maturité.</p>
         </div>
     </div>
 
     <div class="homepage-banner margin-50">
-      Evaluez le score de votre organisation dès à présent !
+      Evaluez la maturité de votre organisation en data science responsable et de confiance !
     </div>
 
     <div class="row" style="columns: 3">
         <div class="column">
             <img class="centered-image middle-width"  src="{% static 'image/picto_homepage_rose.png' %}" alt="image">
             <p class="text-center"><strong>Evaluez votre organisation</strong></p>
-            <p class="center">Evaluez dès à présent votre score à partir d'une série de questions autour de 7 thèmes de la Data Science Responsable et de Confiance</p>
+            <p class="center">Réalisez votre auto-évaluation sur 6 thèmes de la Data Science Responsable et de Confiance</p>
 
         </div>
         <div class="column">
-            <img class="centered-image middle-width"  src="{% static 'image/picto_homepage_vert.png' %}" alt="image">
-            <p class="text-center"><strong>Améliorez votre scoring</strong></p>
-            <p class="center">Analysez votre progression au fil du temps sur les différents axes d'évaluation</p>
+            <img class="centered-image middle-width"  src="{% static 'image/picto_homepage_bleu.png' %}" alt="image">
+            <p class="text-center"><strong>Les ressources techniques</strong></p>
+            <p class="center">Découvrez les ressources qui vous permettrons de progresser, de découvrir de nouveaux outils et d'apprendre de nouvelles techniques</p>
         </div>
         <div class="column">
-            <img class="centered-image middle-width"  src="{% static 'image/picto_homepage_bleu.png' %}" alt="image">
-            <p class="text-center"><strong>Explorez les ressources</strong></p>
-            <p class="center">Découvrez les ressources qui vous permettrons de progresser, de découvrir de nouveaux outils et d'apprendre de nouvelles techniques</p>
+            <img class="centered-image middle-width"  src="{% static 'image/picto_homepage_vert.png' %}" alt="image">
+            <p class="text-center"><strong>Votre score</strong></p>
+            <p class="center">Analysez votre progression au fil du temps sur les différents axes d'évaluation</p>
         </div>
 
     </div>
