--- a/platform_code/home/templates/home/settings-password.html
+++ b/platform_code/home/templates/home/settings-password.html
@@ -16,7 +16,7 @@
 </ul>
 {% endif %}
 
-<div class="body change-password-form">
+<div class="body change-password-form margin-50">
     <div class="column">
         <form method="post" id="ChangePassword">
             {% csrf_token %}
