--- a/platform_code/assessment/templates/assessment/creation-evaluation.html
+++ b/platform_code/assessment/templates/assessment/creation-evaluation.html
@@ -7,7 +7,7 @@
 
 <h1>{% trans "Evaluation creation" %}</h1>
 
-<div class="form-center width-35">
+<div class="form-center width-50">
      <div class="column">
     <form id="create_evaluation_form" method='post' class="form" role="form">
 
@@ -18,7 +18,7 @@
                 <span class="float-left">{{ field.label}}</span>
                 <p > {{field}} </p>
             {% endfor %}
-            <p class="text-form-bis">{% trans "Version" %}</p>
+            <p class="text-form-bis">{% trans "Version of the assessment" %} :</p>
             <p class="attribute-form-bis" title="{% trans 'This number corresponds to the version of the assessment that is currently in use.' %}">
                 {{last_version}}
             </p>
