--- a/platform_code/assessment/templates/assessment/evaluation.html
+++ b/platform_code/assessment/templates/assessment/evaluation.html
@@ -21,7 +21,7 @@
 {% endif %}
 
 {% if messages %}
-<ul class="messages">
+<ul class="messages margin-3em">
     {% for message in messages %}
     <li {% if message.tags %} class=" alert alert-{{ message.tags }}"{% endif %}>{{ message }}</li>
     {% endfor %}
