--- a/platform_code/assessment/templates/assessment/organisation/orga-evaluation.html
+++ b/platform_code/assessment/templates/assessment/organisation/orga-evaluation.html
@@ -48,17 +48,10 @@
               {% else %}
                 <td class="case-array">-</td>
               {% endif %}
-<!--              TODO refactor-->
+              <td class="case-array">
               <!-- If the evaluation is upgradable, which means a new assessment version exists-->
               {% if evaluation.is_upgradable %}
-                <!-- If the evaluation is finished && upgradable -->
-                {% if evaluation.is_finished %}
-                  <td class="case-array">
-                    <a class="btn btn-results medium-button" name="resultat-no-modif"
-                       href="{% url 'assessment:results' organisation.id evaluation.slug evaluation.id %}"
-                      >{% trans "Results" %}</a>
-                    <!-- If the user is an admin of the organisation so he has the right to upgrade && evaluation finished && upgradable  -->
-                    {% if organisation|get_role:user == "admin" or organisation|get_role:user == "editor" %}
+                  {% if organisation|get_role:user == "admin" or organisation|get_role:user == "editor" %}
                       <a href="#" data-toggle="modal" data-target="#modal-upgrade-eval{{evaluation.id}}"
                          class="btn btn-primary medium-button margin-10"
                           >{% trans "Upgrade" %}</a>
@@ -69,27 +62,31 @@
                       </button>
                     <!-- endif role user -->
                     {% endif %}
-                  </td>
-                <!-- Else the evaluation is not finished ( && upgradable )-->
-                {% else %}
-                  <td class="case-array">
-                    <!-- If the user is an organisation admin -->
-                    {% if organisation|get_role:user == "admin" or organisation|get_role:user == "editor" %}
-                      <a href="#" data-toggle="modal" data-target="#modal-upgrade-eval{{evaluation.id}}"
-                         class="btn btn-primary medium-button margin-10"
-                          >{% trans "Upgrade" %}</a>
-                      <a class="btn btn-modify medium-button" href="{{ evaluation.get_absolute_url}}">{% trans "Modify" %}</a>
-                    <!--Else the user is not an organisation admin, ie simple user, so he cannot upgrade the evaluation  -->
-                    {% else %}
-                      <button class="btn btn-primary medium-button margin-10" disabled
-                              title="{% trans 'You do not have the right to do this action' %}">{% trans "Upgrade" %}
-                      </button>
-                      <a class="btn btn-modify medium-button" href="{{ evaluation.get_absolute_url}}">{% trans "Browse" %}</a>
-                    <!-- Endif role user -->
-                    {% endif %}
-                  </td>
-                <!-- Endif evaluation is finished -->
-                {% endif %}
+              {% endif %}
+
+                <!-- If the evaluation is finished  -->
+              {% if evaluation.is_finished %}
+                  <a class="btn btn-results medium-button margin-10" name="resultat-no-modif"
+                       href="{% url 'assessment:results' organisation.id evaluation.slug evaluation.id %}"
+                      >{% trans "Results" %}
+                  </a>
+                  {% if organisation|get_role:user == "admin" or organisation|get_role:user == "editor" %}
+                      <a class="btn btn-modify medium-button margin-10" href="{{ evaluation.get_absolute_url}}">
+                        {% trans "Modify" %}
+                      </a>
+                  {% else %}
+                    <a class="btn btn-modify medium-button" href="{{ evaluation.get_absolute_url}}">{% trans "Browse" %}</a>
+                  {% endif %}
+              {% else %}
+                  {% if organisation|get_role:user == "admin" or organisation|get_role:user == "editor" %}
+                      <a class="btn btn-modify medium-button margin-10" href="{{ evaluation.get_absolute_url}}">
+                        {% trans "Continue" %}
+                      </a>
+                  {% else %}
+                    <a class="btn btn-modify medium-button" href="{{ evaluation.get_absolute_url}}">{% trans "Browse" %}</a>
+                  {% endif %}
+              {% endif %}
+
                 <!-- Modal to upgrade-->
               <div class="modal" id="modal-upgrade-eval{{evaluation.id}}" aria-hidden="true"
                    data-backdrop="static" data-keyboard="false">
@@ -99,24 +96,7 @@
                   </div>
                 </div>
               </div>
-              <!-- Else the evaluation is not upgradable -->
-              {% else %}
-              {% if evaluation.is_finished %}
-                  <td class="case-array">
-                    <a class="btn btn-results medium-button"
-                       name="resultat-no-modif" href="{% url 'assessment:results' organisation.id evaluation.slug evaluation.id %}"
-                    >{% trans "Results" %}</a></td>
-                {% else %}
-                  {% if organisation|get_role:user == "admin" or organisation|get_role:user == "editor" %}
-                    <td class="case-array"><a class="btn btn-modify medium-button" href="{{ evaluation.get_absolute_url}}"
-                    >{% trans "Modify" %}</a></td>
-                  {% else %}
-                    <td class="case-array"><a class="btn btn-modify medium-button" href="{{ evaluation.get_absolute_url}}"
-                    >{% trans "Browse" %}</a></td>
-                  {% endif %}
-                {% endif %}
-              <!-- Endif the evaluation is upgradable and end of the case -->
-              {% endif %}
+              </td>
 
               <td class="div-hidden-icons background-white" id="div-hidden-icons{{evaluation.id}}" >
                   {% if organisation|get_role:user == "admin" or organisation|get_role:user == "editor" %}
