--- a/platform_code/assessment/templates/assessment/results.html
+++ b/platform_code/assessment/templates/assessment/results.html
@@ -1,5 +1,6 @@
 {% extends 'base-evaluation.html' %}
 {% load add_attr %}
+{% load static %}
 {% load i18n %}
 
 {% block content %}
@@ -19,7 +20,7 @@
 {% endif %}
 
 {% if messages %}
-<ul class="messages margin-50">
+<ul class="messages margin-3em">
     {% for message in messages %}
     <li {% if message.tags %} class=" alert alert-{{ message.tags }}"{% endif %}>{{ message }}</li>
     {% endfor %}
@@ -122,43 +123,5 @@
     </div>
 </div>
 
-<script>
-$(function() {
-
-  $(".progress").each(function() {
-    var value = $(this).attr('data-value');
-    if (typeof value === "string"){
-        value = parseFloat(value);
-        console.log("value changed", value, typeof value);
-    }
-    var left = $(this).find('.progress-left .progress-bar');
-    var right = $(this).find('.progress-right .progress-bar');
-    console.log("value", value, typeof value);
-
-    if (value > 0) {
-      if (value <= 50) {
-        right.css('transform', 'rotate(' + percentageToDegrees(value) + 'deg)')
-      } else {
-        right.css('transform', 'rotate(180deg)')
-        left.css('transform', 'rotate(' + percentageToDegrees(value - 50) + 'deg)')
-      }
-    }
-
-  })
-
-  function percentageToDegrees(percentage) {
-
-    return percentage / 100 * 360
-
-  }
-
-});
-
-function topFunction() {
-  document.body.scrollTop = 0; // For Safari
-  document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
-}
-
-</script>
 
 {% endblock %}
