--- a/platform_code/home/templates/home/account/acc_activate_email.html
+++ b/platform_code/home/templates/home/account/acc_activate_email.html
@@ -7,6 +7,6 @@
 
 {% trans "If clicking the link above doesn't work, please copy and paste the URL in a new browser window instead." %}
 
-{% trans "Sincerely," %}
+{% trans "Kind regards," %}
 {% trans "The Substra Foundation Team" %}
 {% endautoescape %}
