--- a/platform_code/home/templates/home/login-modal.html
+++ b/platform_code/home/templates/home/login-modal.html
@@ -18,16 +18,16 @@
             <h4 class="modal-title absolute-position" id="myModalLabel">{% trans "Login" %}</h4>
             <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
-        <div class="modal-body create-form width-50">
+        <div class=" create-form width-50">
             <div class="column">
                 {% csrf_token %}
                 <span class="margin-right: 9em;">{{ login_form.username.label_tag }}</span>
                 <p >{{ login_form.username }}</p>
                 <span class="margin-right: 5em;">{{ login_form.password.label_tag }}</span>
                 <p>{{ login_form.password }}</p>
-                <div class="row padding-1" >
+                <div class="row padding-1 margin-auto" >
                     <div>
-                        <input type="submit" class="btn btn-primary same-size-250" value="{% trans 'Validate' %}" style="margin: auto" />
+                        <input type="submit" class="btn btn-primary same-size-250" value="{% trans 'Validate' %}" />
                     </div>
                     <div class="margin-10">
                         <input type="hidden" name="next" value="{{ next }}" />
