--- a/platform_code/home/templates/home/profile-orga-cards.html
+++ b/platform_code/home/templates/home/profile-orga-cards.html
@@ -4,7 +4,7 @@
 {% load i18n %}
 
 
-     <div class="margin-bot-top-20">
+     <div class="margin-50 margin-bot-30">
         <a href="{% url 'home:orga-creation' %}" data-toggle="modal" data-target="#modal-create-orga"
            class="btn btn-primary card-button">{% trans "Create a new organisation" %}
         </a>
