--- a/platform_code/home/templates/home/profile.html
+++ b/platform_code/home/templates/home/profile.html
@@ -14,7 +14,7 @@
 <h1>{% trans "Your dashboard" %} </h1>
 
 {% if messages %}
-<ul class="messages">
+<ul class="messages margin-3em">
     {% for message in messages %}
     <li {% if message.tags %} class=" alert alert-{{ message.tags }}"{% endif %}>{{ message }}</li>
     {% endfor %}
