Fix translation issues

--- a/platform_code/assessment/templates/assessment/creation-evaluation-modal.html
+++ b/platform_code/assessment/templates/assessment/creation-evaluation-modal.html
@@ -16,7 +16,7 @@
                 <p > {{field}} </p>
             {% endfor %}
             <p class="" title="{% trans 'This number corresponds to the version of the assessment that is currently in use.' %}">
-                {% trans "Version of the assessment" %} : {{last_version}}
+                {% trans "Assessment version" %} : {{last_version}}
             </p>
             </div>
         </div>
