--- a/platform_code/assessment/templates/assessment/creation-evaluation.html
+++ b/platform_code/assessment/templates/assessment/creation-evaluation.html
@@ -18,7 +18,7 @@
                 <span class="float-left">{{ field.label}}</span>
                 <p > {{field}} </p>
             {% endfor %}
-            <p class="text-form-bis">{% trans "Version of the assessment" %} :</p>
+            <p class="text-form-bis">{% trans "Assessment version" %} :</p>
             <p class="attribute-form-bis" title="{% trans 'This number corresponds to the version of the assessment that is currently in use.' %}">
                 {{last_version}}
             </p>
