--- a/platform_code/assessment/templates/assessment/sidebar.html
+++ b/platform_code/assessment/templates/assessment/sidebar.html
@@ -7,7 +7,7 @@
 
 {% endfor %}
 
-<a class=" title-sidenav" href="{{ evaluation.get_absolute_url }}" >{% trans "Back to the evaluation summary" %}</a>
+<a class=" title-sidenav" href="{{ evaluation.get_absolute_url }}" >{% trans "Evaluation summary" %}</a>
 
 <script>
 var coll = document.getElementsByClassName("collapsible-section");
