--- a/platform_code/home/templates/home/registration/password_reset_email.html
+++ b/platform_code/home/templates/home/registration/password_reset_email.html
@@ -10,6 +10,6 @@ Hello {{ user.get_full_name }},
 
 {% trans "If clicking the link above doesn't work, please copy and paste the URL in a new browser window instead." %}
 
-{% trans "Sincerely," %}
+{% trans "Kind regards," %}
 {% trans "The Substra Foundation Team" %}
 {% endautoescape %}
