--- a/platform_code/assessment/static/css/element-card.css
+++ b/platform_code/assessment/static/css/element-card.css
@@ -221,10 +221,14 @@ div.evaluation-title: h3 {
 .title-sidenav {
   padding: 6px 6px 6px 32px;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 16px;
   display: block;
   color: #848482;
-
+  overflow: hidden;
+  height: 3em;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 .sidenav a:hover {
