--- a/platform_code/assessment/static/css/section-card.css
+++ b/platform_code/assessment/static/css/section-card.css
@@ -57,7 +57,7 @@ h5.card-title-section {
   margin-top: 30px;
   margin-bottom: 20px;
   width: 100%;
-  /*height: 100%;*/
+  height: 8.5em;
   display: block;
   overflow: hidden;
   text-overflow: ellipsis;
