--- a/platform_code/assessment/templates/assessment/base-card-section.html
+++ b/platform_code/assessment/templates/assessment/base-card-section.html
@@ -2,6 +2,7 @@
 
 {% load static %}
 {% load i18n %}
+{% load markdownify %}
 
     <article class="card-section" >
         <div class="row margin-bot-30">
@@ -40,7 +41,7 @@
       {% endif %}
         </div>
       <div class="card-body-section">
-        <p class="card-text-section">{% blocktrans with description=section.master_section.description %}{{description}}{% endblocktrans %}</p>
+        <p class="card-text-section">{{section.master_section.description|markdownify}}</p>
         <a href="{{ section.get_absolute_url }}"
            class="btn btn-primary card-button-section">{% trans "Go to the section" %}</a>
       </div>
