--- a/platform_code/assessment/templates/assessment/results.html
+++ b/platform_code/assessment/templates/assessment/results.html
@@ -34,7 +34,7 @@
 
     <!-- Progress bar 1 -->
     <div class="progress progress-results mx-auto"
-         data-value='{{evaluation.score}}'>
+         data-value='{{evaluation_score}}'>
           <span class="progress-left progress-left-results">
               <span class="progress-bar progress-bar-results border-primary" ></span>
           </span>
@@ -43,7 +43,7 @@
           </span>
           <div class="progress-value progress-value-results w-100 h-100
            rounded-circle d-flex align-items-center justify-content-center">
-            <div class="h2 font-weight-bold">{{evaluation.score}}<sup class="small"></sup></div>
+            <div class="h2 font-weight-bold">{{evaluation_score}}<sup class="small"></sup></div>
           </div>
     </div>
         <!-- END -->
